--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 05_metric_comparison.ipynb
-06_XGBoost_clfapply_modelos.ipynb
+06_XGBoost_clf.ipynb
 messages_fun.py
 xx_Summary.ipynb
 xx_test_models_grid_results.ipynb
