--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ messages_fun.py
 xx_Summary.ipynb
 xx_test_models_grid_results.ipynb
 xx_test_models_top_socres.ipynb
+pruebas.py
+00_Main_XGBoost.py
