--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@
 /grid_results/__pycache__
 /top_scores/__pycache__
 lib/messages_fun.py
-05_Metric_comparison.ipynb
-06_XGBoost_clf.ipynb
+10_Metric_comparison.ipynb
+11_XGBoost_clf.ipynb
 app.log
 main.py
 pruebas.py
@@ -23,4 +23,4 @@ xx_test_models_grid_results.ipynb
 xx_test_models_top_socres.ipynb
 GPU0_main.py
 GPU1_main.py
-
+/predictor
