--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@
 lib/messages_fun.py
 10_Metric_comparison.ipynb
 11_XGBoost_clf.ipynb
-pruebas.py
+../Farmacoinformatica-2022/05_Sesion-V/pruebas.py
 pruebas.ipynb
 xx_Summary.ipynb
 xx_test_models_grid_results.ipynb
